# ETL_via_SingerSDK

./: Overview.pptx  README  README.md
tap_jsonplaceholder/: comment_metrics_20250209_034725.csv  comments-20250207T153925.json  config.json  dashboard.py  data_analyzer.py  output.json  post_metrics_20250209_152136.csv  posts-20250207T153925.json  pyproject.toml  target-config.json  update_json.ps1  update_log.txt  user_metrics_20250209_160811.csv
tap_jsonplaceholder/tap_jsonplaceholder/: __init__.py  errors.py  pyproject.toml  streams.py  tap.py  transform.py  utils.py  validators.py
